@@ -76,3 +76,25 @@ test7:
         - ヒーロー見参
         - ！
         - EOS
+test8:
+    text: 心の中で3回唱え、 ヒーロー見参！ヒーロー見参！ヒーロー見参！ 
+    options: '-F%m,%f[0],%s'
+    constraints:
+        key: ヒーロー見参
+        feature: その他
+    expected: 
+        - 心,名詞,0 
+        - の,助詞,0
+        - 中,名詞,0
+        - で,助詞,0
+        - '3,名詞,1'
+        - 回,名詞,0
+        - 唱え,動詞,0
+        - 、,記号,0
+        - ヒーロー見参,その他,1 
+        - ！,記号,0
+        - ヒーロー見参,その他,1 
+        - ！,記号,0
+        - ヒーロー見参,その他,1 
+        - ！,記号,0
+        - EOS
